# a1_ros2_simulation

./: README.md  doc
a1_controller/: CMakeLists.txt
a1_controller/include/: body.h
a1_controller/src/: body.cpp  move_publisher.cpp  servo.cpp  set_model_state.cpp
a1_description/: CMakeLists.txt
a1_description/config/: robot_control.yaml  robot_control.yaml.bak  robot_control.yaml.normal
a1_description/launch/: dd.launch.py  demo.launch.py
a1_description/rviz/: check_joint.rviz
a1_description/urdf/: a1.urdf
a1_description/xacro/: a1.backup  a1.ros2_control.xacro  a1.ros2_control.xacro.bak  gazebo.xacro  robot.xacro
a1_gazebo/: CMakeLists.txt  package.xml
a1_gazebo/launch/: a1.launch.py  a2.launch.py  f.launch.py  normal.launch  rrbot.launch.py  tt.launch.py
a1_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
a1_gazebo/worlds/: stairs.world
a1_gazebo/worlds/building_editor_models/stairs/: model.sdf
a1_joint_control/: CMakeLists.txt  a1_drive_plugin.xml  package.xml  unitree_controller_plugins.xml
a1_joint_control/include/: a1_joint.h  joint_controller.h
a1_joint_control/include/a1_drive_controller/: a1_drive_controller.hpp  visibility_control.h
a1_joint_control/src/: a1_drive_controller.cpp  a1_joint.cpp  joint_controller.cpp
a1_msgs/: CMakeLists.txt
a1_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
a1_msgs/log/: latest_build
install/: local_setup.sh  setup.sh
install/a1_controller/lib/a1_controller/: unitree_move  unitree_servo
install/a1_controller/share/a1_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/a1_controller/share/a1_controller/cmake/: a1_controllerConfig.cmake  ament_cmake_export_include_directories-extras.cmake
install/a1_controller/share/ament_index/resource_index/parent_prefix_path/: a1_controller
install/a1_description/share/a1_description/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/a1_description/share/a1_description/config/: robot_control.yaml  robot_control.yaml.first  robot_control.yaml.ll
install/a1_description/share/a1_description/launch/: normal.launch.py
install/a1_description/share/a1_description/urdf/: a1.urdf.xml
install/a1_description/share/a1_description/xacro/: a1.normal  a1.ros2_control.xacro  gazebo.xacro
install/a1_gazebo/share/a1_gazebo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/a1_gazebo/share/a1_gazebo/cmake/: a1_gazeboConfig.cmake
install/a1_gazebo/share/a1_gazebo/launch/: try.launch.py
install/a1_gazebo/share/a1_gazebo/worlds/: stairs.world
install/a1_joint_control/share/a1_joint_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  unitree_controller_plugins.xml
install/a1_joint_control/share/a1_joint_control/cmake/: a1_joint_controlConfig.cmake
install/a1_joint_control/share/ament_index/resource_index/controller_interface__pluginlib__plugin/: a1_joint_control
install/a1_msgs/include/a1_msgs/msg/: cartesian.h  high_cmd.h  high_state.h  led.hpp  low_cmd.h  low_cmd.hpp  low_state.h  low_state.hpp  motor_cmd.h  motor_state.h  motor_state.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/a1_msgs/include/a1_msgs/msg/detail/: cartesian__builder.hpp  cartesian__rosidl_typesupport_introspection_cpp.hpp  cartesian__struct.hpp  cartesian__traits.hpp  cartesian__type_support.c  high_cmd__builder.hpp  high_cmd__struct.hpp  high_cmd__type_support.h  high_state__functions.c  high_state__functions.h  high_state__rosidl_typesupport_fastrtps_c.h  high_state__rosidl_typesupport_fastrtps_cpp.hpp  high_state__rosidl_typesupport_introspection_c.h  high_state__rosidl_typesupport_introspection_cpp.hpp  high_state__type_support.c  high_state__type_support.cpp  imu__builder.hpp  imu__rosidl_typesupport_fastrtps_c.h  imu__rosidl_typesupport_fastrtps_cpp.hpp  imu__rosidl_typesupport_introspection_c.h  imu__rosidl_typesupport_introspection_cpp.hpp  imu__struct.h  imu__struct.hpp  imu__traits.hpp  imu__type_support.c  led__builder.hpp  led__functions.h  led__rosidl_typesupport_fastrtps_cpp.hpp  led__rosidl_typesupport_introspection_cpp.hpp  led__struct.h  led__traits.hpp  low_cmd__struct.hpp  low_state__functions.c  low_state__rosidl_typesupport_fastrtps_cpp.hpp  low_state__rosidl_typesupport_introspection_cpp.hpp  low_state__traits.hpp  low_state__type_support.c  low_state__type_support.cpp  low_state__type_support.h  motor_cmd__builder.hpp  (+16 more)
install/a1_msgs/include/a1_msgs/srv/: cartesian.h  high_state.h  imu.h  imu.hpp  low_state.h
install/a1_msgs/include/a1_msgs/srv/detail/: cartesian__builder.hpp  cartesian__functions.h  cartesian__rosidl_typesupport_fastrtps_c.h  cartesian__rosidl_typesupport_fastrtps_cpp.hpp  cartesian__rosidl_typesupport_introspection_cpp.hpp  cartesian__struct.h  cartesian__type_support.c  cartesian__type_support.cpp  cartesian__type_support.h  high_state__builder.hpp  high_state__rosidl_typesupport_fastrtps_c.h  high_state__traits.hpp  high_state__type_support.h  imu__rosidl_typesupport_introspection_c.h  imu__struct.hpp  imu__traits.hpp  imu__type_support.c  imu__type_support.cpp  low_state__rosidl_typesupport_introspection_c.h  low_state__struct.hpp  (+8 more)
install/a1_msgs/share/a1_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/a1_msgs/share/a1_msgs/cmake/: a1_msgs__rosidl_generator_cppExport.cmake  a1_msgs__rosidl_typesupport_cExport-noconfig.cmake  a1_msgs__rosidl_typesupport_cppExport.cmake  a1_msgs__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake
install/a1_msgs/share/a1_msgs/msg/: HighCmd.idl  LowCmd.idl  MotorCmd.idl
install/a1_msgs/share/a1_msgs/srv/: Cartesian_Response.msg  HighState.idl  HighState_Response.msg  Imu.idl  Mode_Response.msg
log/: latest_build
robots/a1_description/: CMakeLists.txt  package.xml
(+1 files in other folders)
