<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>a1_description</name>
    <version>0.0.0</version>
    <description>The a1_description package</description>
    <maintainer email="guoliguo@huawei.com">Liguo Guo</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <buildtool_depend>ament_make</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

</package>
